[gd_scene load_steps=3 format=3 uid="uid://dsb6vxpbduj7f"]

[ext_resource type="Script" path="res://addons/project_time_tracker/project_timer.gd" id="1_1r5vr"]
[ext_resource type="Script" path="res://addons/project_time_tracker/settings_window.gd" id="2_p44mt"]

[node name="Project Timer" type="Control"]
custom_minimum_size = Vector2(200, 91)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1r5vr")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TimeInProject" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Time in project: 00:00:00"
autowrap_mode = 3

[node name="TimeThisSession" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Time this session: 00:00:00"
autowrap_mode = 3

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="SettingsWindow" type="Window" parent="."]
title = "Timer Settings"
initial_position = 2
size = Vector2i(195, 100)
visible = false
popup_window = true
script = ExtResource("2_p44mt")

[node name="Control" type="Control" parent="SettingsWindow"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsWindow/Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="SettingsWindow/Control/VBoxContainer"]
layout_mode = 2
text = "Manually Set Time To"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsWindow/Control/VBoxContainer"]
layout_mode = 2

[node name="InputHours" type="LineEdit" parent="SettingsWindow/Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
placeholder_text = "h"

[node name="InputMinutes" type="LineEdit" parent="SettingsWindow/Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
placeholder_text = "m"

[node name="InputSeconds" type="LineEdit" parent="SettingsWindow/Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
placeholder_text = "s"

[node name="SetTimeButton" type="Button" parent="SettingsWindow/Control/VBoxContainer"]
layout_mode = 2
text = "Set"

[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="close_requested" from="SettingsWindow" to="." method="_on_settings_window_close_requested"]
[connection signal="set_new_time" from="SettingsWindow" to="." method="_on_settings_window_set_new_time"]
[connection signal="text_changed" from="SettingsWindow/Control/VBoxContainer/HBoxContainer/InputHours" to="SettingsWindow" method="_on_input_hours_text_changed"]
[connection signal="text_changed" from="SettingsWindow/Control/VBoxContainer/HBoxContainer/InputMinutes" to="SettingsWindow" method="_on_input_minutes_text_changed"]
[connection signal="text_changed" from="SettingsWindow/Control/VBoxContainer/HBoxContainer/InputSeconds" to="SettingsWindow" method="_on_input_seconds_text_changed"]
[connection signal="pressed" from="SettingsWindow/Control/VBoxContainer/SetTimeButton" to="SettingsWindow" method="_on_set_time_button_pressed"]
